# px4_mid360

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  dependencies.repos  package.xml
config/fast_lio/: mid360_localization.yaml  mid360_warehouse.yaml
config/livox/: MID360_config.json
config/mavros2/: px4_config.yaml
config/missions/: six_warehouse_layout.yaml
config/nav2/: costmap_global.yaml  costmap_local.yaml  nav2_params.yaml  z_axis_monitor.yaml
config/px4/: ekf2_params.txt  offboard_params.yaml
config/rviz2/: mapping_view.rviz2  mission_monitor.rviz2
config/waypoints/: warehouse_example.yaml
docs/: code_reading_roadmap.md  ego_planner_integration.md  flight_checklist.md  hands_on_workbook.md  inventory_workflow.md  learner_full_guide.md  learning_guide.md  px4_ros2_dds_guide.md  setup_guide.md
launch/auto_flight/: bringup_all.launch.py  ego_planner_ros2.launch.py  localize_only.launch.py  offboard_mission.launch.py
launch/mapping/: build_map_offline.launch.py  online_mapping.launch.py  record_bag.launch.py  save_map.launch.py
scripts/: check_system_health.sh  install_dependencies.sh  patch_ego_planner_ros2.sh  process_bag_to_map.sh
src/fast_lio_bridge/: CMakeLists.txt  package.xml
src/fast_lio_bridge/launch/: odometry_pipeline.launch.py
src/fast_lio_bridge/src/: odometry_relay.cpp  pointcloud_relay.cpp
src/map_manager/: CMakeLists.txt  package.xml
src/map_manager/launch/: load_map.launch.py  save_map.launch.py
src/map_manager/src/: map_loader.cpp  map_saver.cpp  pcd_to_pgm.cpp
src/mid360_driver_wrapper/: CMakeLists.txt  package.xml
src/mid360_driver_wrapper/config/: MID360_config.json  MID360_config说明.md
src/mid360_driver_wrapper/launch/: mid360_driver.launch.py
src/mid360_driver_wrapper/src/: driver_monitor.cpp
src/px4_offboard_bridge/: CMakeLists.txt  package.xml
src/px4_offboard_bridge/config/: offboard_params.yaml
src/px4_offboard_bridge/launch/: offboard_bridge.launch.py
src/px4_offboard_bridge/src/: cmdvel_to_setpoint.cpp  ego_planner_path_follower.cpp  ego_planner_ros2_adapter.cpp  local_3d_avoidance.cpp  local_3d_safety_filter.cpp  offboard_controller.cpp  px4_cmdvel_bridge.cpp  px4_status_bridge.cpp  px4_visual_odometry_bridge.cpp  vision_pose_bridge.cpp  z_axis_monitor.cpp
src/relocalizer/: CMakeLists.txt  package.xml
src/relocalizer/launch/: start.launch.py
src/relocalizer/src/: icp_relocalizer.cpp
src/safety_monitor/: CMakeLists.txt  package.xml
src/safety_monitor/launch/: all_monitors.launch.py
src/safety_monitor/src/: battery_monitor.cpp  communication_watchdog.cpp  ekf_health_monitor.cpp  geofence_monitor.cpp
src/warehouse_utils/: CMakeLists.txt  package.xml
src/warehouse_utils/include/warehouse_utils/: frame_conversions.h  frame_conversions.hpp  yaml_utils.h
src/warehouse_utils/src/: frame_conversions.cpp  yaml_utils.cpp
src/waypoint_planner/: CMakeLists.txt  package.xml
src/waypoint_planner/launch/: mission.launch.py
src/waypoint_planner/msg/: Waypoint.msg  WaypointArray.msg
src/waypoint_planner/scripts/: generate_inventory_mission.py  interactive_waypoints.py  optimize_inventory_route.py
src/waypoint_planner/src/: mission_executor.cpp  waypoint_manager.cpp
src/waypoint_planner/srv/: LoadWaypoints.srv  SaveWaypoints.srv
