<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>px4_mid360</name>
  <version>0.1.0</version>
  <description>Top-level launch and configuration package for the PX4 + Livox MID360 warehouse stack.</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>fast_lio2</exec_depend>
  <exec_depend>fast_lio_bridge</exec_depend>
  <exec_depend>map_manager</exec_depend>
  <exec_depend>mavros2</exec_depend>
  <exec_depend>mid360_driver_wrapper</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>px4_offboard_bridge</exec_depend>
  <exec_depend>relocalizer</exec_depend>
  <exec_depend>safety_monitor</exec_depend>
  <exec_depend>waypoint_planner</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
